--- a/spring-autowired-npe/pom.xml
+++ b/spring-autowired-npe/pom.xml
@@ -58,6 +58,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<start.class>com.chrylis.example.spring_autowired_npe.Main</start.class>
 	</properties>
 
 	<dependencies>
@@ -81,11 +82,11 @@
 		</dependency>
 
 
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>mysql</groupId> -->
+		<!-- <artifactId>mysql-connector-java</artifactId> -->
+		<!-- <scope>runtime</scope> -->
+		<!-- </dependency> -->
 
 		<dependency>
 			<groupId>mysql</groupId>
@@ -110,6 +111,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!--https://docs.spring.io/spring-boot/docs/current/maven-plugin/reference/htmlsingle/ -->
+				<configuration>
+					<mainClass>${start.class}</mainClass>
+					<layout>ZIP</layout>
+				</configuration>
 				<executions>
 					<execution>
 						<configuration>
